# cli-breakpad.trial

./: CMakeLists.txt  README.md  main.cpp
Frameworks/: Breakpad.framework
breakpad/mac/: dump_syms
breakpad/mac/Breakpad.framework/Versions/A/: Breakpad
breakpad/mac/Breakpad.framework/Versions/A/Resources/: Info.plist  Inspector  breakpadUtilities.dylib
breakpad/mac/Breakpad.framework/Versions/A/Resources/crash_report_sender.app/Contents/: Info.plist
breakpad/mac/Breakpad.framework/Versions/A/Resources/crash_report_sender.app/Contents/MacOS/: crash_report_sender
breakpad/mac/Breakpad.framework/Versions/A/Resources/crash_report_sender.app/Contents/Resources/: Breakpad.nib
breakpad/mac/Breakpad.framework/Versions/A/Resources/crash_report_sender.app/Contents/_CodeSignature/: CodeResources
breakpad/mac/Breakpad.framework/Versions/A/_CodeSignature/: CodeResources
breakpad/mac/i386/: minidump_stackwalk
